# electron-ffplay

./: .eslintrc.js  .gitignore  .npmrc  LICENSE  README.md  binding.gyp  package.json
.electron-vue/: build.js  dev-main.js  dev-runner.js  webpack.main.config.js  webpack.renderer.config.js
cmake-tool/: appCMakeJSConfig.js  buildSystem.js  cMake.js  cmLog.js  electron-abi.js  environment.js  index.js  node-addon.cmake  processHelpers.js  targetOptions.js  toolset.js
node-ffplay/: CMakeLists.txt  index.js  package.json
node-ffplay/src/: player.cc  player.h  wrap.cc
src/: ffplay.js  import-dll.js  index.ejs  index.js
src/components/: app-bar.vue  app.vue  dialogs.vue
src/components/xplayer/: controller.vue  detection-canvas.js  index.vue  info-panel.vue  loading.vue  play-list.vue  settings.vue  test_decode.js  video.vue  yuv-canvas.js
src/i18n/: en.yml  index.js  zh-cn.yml
src/main/: index.dev.js  index.js
src/store/: index.js  video.js
test/e2e/: utils.js
